# Unibots_24_Effervescent

./: .gitignore  Chassis.py  LICENSE  Main.py  Main_2.py  Main_3.py  README.md  configure.sh  dev_log.txt  obstacle_avoidance.py  pid_tuning.py  realtimeplot.py  test.py  test_all.py
code/: helloworld.py  test.py
general_modules/: plot_motor_velocity.py
gpio_modules_XIAOYANG/: blink.py  clean_gpio.py  enable_gpio  fade.py  test.py  ultrasound_gpio.py  ultrasound_test.py  ultrasound_via_arduino.py
gpio_modules_XIAOYANG/arduino_read_ultrasound_sample_from_gpt/: arduino_read_ultrasound_sample_from_gpt.ino
gpio_modules_XIAOYANG/ultrasound_arduino_interface/: ultrasound_arduino_interface.ino
lidar_sdk/: CMakeLists.txt  README.md  blocking_test.py
lidar_sdk/samples/: CMakeLists.txt  blocking_c_api_test.c  blocking_test.cpp  blocking_test.py  data_interface.py  non-blocking_test.cpp  non-blocking_test.py
lidar_sdk/src/: CMakeLists.txt  ord_lidar_driver.cpp  ord_lidar_driver.h  ord_lidar_py.cpp  ord_lidar_sdk.cpp  ord_lidar_sdk.h  pyordlidar.cpp
modules/: Chassis.py  Event_Handler.py  test.py  ultrasound_via_arduino.py
motor_drive_modules/: Chassis.py  Event_Handler.py  Lidar.py  PIDController.py  Plotter.py  RosmasterBoard.py  Servo.py  car_motion.py  imu_read.py  obstacle_avoidance.py  pid_tuning.py  test.py  test2.py  ultrasound_via_arduino.py
motor_drive_modules_RYAN/: Chassis.py  Constants.py  realtimeplot.py
pybind_approach_archive/: blocking_test.py
pybind_test/: CMakeLists.txt  main.cpp  test.py  test1.cpp  test1.py
sdk/: CMakeLists.txt
(+22 files in other folders)
